Fixing the spacing on the sign up and log in blocks

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -9,6 +9,7 @@ body {
 #log-in,
 #sign-up {
   margin-top: -20px;
+  margin-bottom: 20px;
   background-color: lighten($dark-gray, 3%);
   color: #fff;
 
@@ -27,6 +28,7 @@ body {
 }
 
 .jumbotron.front-page {
+  margin-top: -20px;
   text-align: center;
 }
 
